--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="index.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>EdiTTS</title>
+    <title>IIP-TTS</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156162365-1"></script>
@@ -46,19 +46,6 @@
             <a class="col-md-1 col-xs-1 text-dark"><span></span></a>
         </div>
 
-
-        <!-- Paper section -->
-        <div class='row text-center'>
-            <!-- thumbnail of paper on left side of abstract -->
-            <div class="col" style="margin-top:20px">
-                <a class="h5" href="https://arxiv.org/abs/2110.02584" style="margin-left:10px">
-                    <span>[arXiv]</span>
-                </a>
-                <a class="h5" href="https://github.com/neosapience/EdiTTS" style="margin-left:10px">
-                    <span>[Code]</span>
-                </a>
-            </div>
-        </div>
         <div>
             <hr>
             <div class='col text-center'>
