--- a/index.html
+++ b/index.html
@@ -653,7 +653,8 @@
                         </audio>
                     </div>
                 </div>
-
+            </div>
+            <div style='display: flex; align-content: center;margin-bottom: 50px'>
                 <div style='flex: 1;'>
                     <p class='h4'>Example 3</p>
                     <div class='row' style='height: 40px; text-align: center; height: 80px'>
@@ -761,7 +762,9 @@
                         </audio>
                     </div>
                 </div>
+            </div>
 
+            <div style='display: flex; align-content: center;margin-bottom: 50px'>
                 <div style='flex: 1;'>
                     <p class='h4'>Example 5</p>
                     <div class='row' style='height: 40px; text-align: center; height: 80px'>
@@ -868,7 +871,8 @@
                         </audio>
                     </div>
                 </div>
-
+            
+            <div style='display: flex; align-content: center;margin-bottom: 50px'>
                 <div style='flex: 1;'>
                     <p class='h4'>Example 7</p>
                     <div class='row' style='height: 40px; text-align: center; height: 80px'>
@@ -922,7 +926,8 @@
                         </audio>
                     </div>
                 </div>
-
+                
+            <div style='display: flex; align-content: center;margin-bottom: 50px'>
                 <div style='flex: 1;'>
                     <p class='h4'>Example 8</p>
                     <div class='row' style='height: 40px; text-align: center; height: 80px'>
