--- a/index.html
+++ b/index.html
@@ -654,6 +654,7 @@
                     </div>
                 </div>
             </div>
+
             <div style='display: flex; align-content: center;margin-bottom: 50px'>
                 <div style='flex: 1;'>
                     <p class='h4'>Example 3</p>
@@ -871,6 +872,7 @@
                         </audio>
                     </div>
                 </div>
+            </div>
             
             <div style='display: flex; align-content: center;margin-bottom: 50px'>
                 <div style='flex: 1;'>
@@ -927,7 +929,6 @@
                     </div>
                 </div>
                 
-            <div style='display: flex; align-content: center;margin-bottom: 50px'>
                 <div style='flex: 1;'>
                     <p class='h4'>Example 8</p>
                     <div class='row' style='height: 40px; text-align: center; height: 80px'>
