--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@
                     </div>
                     <div class='row' style='text-align: center;'>
                         <div class='item' style='width: 150px; align-self: center;'>
-                            IIP-TTS (Original)
+                            IIP-TTS
                         </div>
                         <audio controls controlsList="nodownload"
                             style='display: inline-block; align-self: center; padding-top:8px; padding-bottom:8px; width: 270px; height: 50px; width: 270px; height: 50px'>
@@ -780,7 +780,8 @@
 
                     <div class='row' style='text-align: center;'>
                         <div class='item' style='width: 150px; align-self: center;'>
-                            FastPitch (Original)
+                            FastPitch 
+                            (Original)
                         </div>
                         <audio controls controlsList="nodownload"
                             style='display: inline-block; align-self: center; padding-top:8px; padding-bottom:8px; width: 270px; height: 50px; width: 270px; height: 50px'>
@@ -790,7 +791,8 @@
                     </div>
                     <div class='row' style='text-align: center;'>
                         <div class='item' style='width: 150px; align-self: center;'>
-                            FastPitch (Manipulated)
+                            FastPitch 
+                            (Manipulated)
                         </div>
                         <audio controls controlsList="nodownload"
                             style='display: inline-block; align-self: center; padding-top:8px; padding-bottom:8px; width: 270px; height: 50px; width: 270px; height: 50px'>
@@ -800,7 +802,8 @@
                     </div>
                     <div class='row' style='text-align: center;'>
                         <div class='item' style='width: 150px; align-self: center;'>
-                            IIP-TTS (Original)
+                            IIP-TTS 
+                            (Original)
                         </div>
                         <audio controls controlsList="nodownload"
                             style='display: inline-block; align-self: center; padding-top:8px; padding-bottom:8px; width: 270px; height: 50px; width: 270px; height: 50px'>
@@ -810,7 +813,8 @@
                     </div>
                     <div class='row' style='text-align: center;'>
                         <div class='item' style='width: 150px; align-self: center;'>
-                            IIP-TTS (Manipulated)
+                            IIP-TTS 
+                            (Manipulated)
                         </div>
                         <audio controls controlsList="nodownload"
                             style='display: inline-block; align-self: center; padding-top:8px; padding-bottom:8px; width: 270px; height: 50px; width: 270px; height: 50px'>
@@ -819,6 +823,7 @@
                         </audio>
                     </div>
                 </div>
+
                 <div style='flex: 1;'>
                     <p class='h4'>Example 6</p>
                     <div class='row' style='height: 40px; text-align: center; height: 80px'>
@@ -833,7 +838,8 @@
 
                     <div class='row' style='text-align: center;'>
                         <div class='item' style='width: 150px; align-self: center;'>
-                            FastPitch (Original)
+                            FastPitch 
+                            (Original)
                         </div>
                         <audio controls controlsList="nodownload"
                             style='display: inline-block; align-self: center; padding-top:8px; padding-bottom:8px; width: 270px; height: 50px; width: 270px; height: 50px'>
@@ -843,7 +849,8 @@
                     </div>
                     <div class='row' style='text-align: center;'>
                         <div class='item' style='width: 150px; align-self: center;'>
-                            FastPitch (Manipulated)
+                            FastPitch 
+                            (Manipulated)
                         </div>
                         <audio controls controlsList="nodownload"
                             style='display: inline-block; align-self: center; padding-top:8px; padding-bottom:8px; width: 270px; height: 50px; width: 270px; height: 50px'>
@@ -853,7 +860,8 @@
                     </div>
                     <div class='row' style='text-align: center;'>
                         <div class='item' style='width: 150px; align-self: center;'>
-                            IIP-TTS (Original)
+                            IIP-TTS 
+                            (Original)
                         </div>
                         <audio controls controlsList="nodownload"
                             style='display: inline-block; align-self: center; padding-top:8px; padding-bottom:8px; width: 270px; height: 50px; width: 270px; height: 50px'>
@@ -863,7 +871,8 @@
                     </div>
                     <div class='row' style='text-align: center;'>
                         <div class='item' style='width: 150px; align-self: center;'>
-                            IIP-TTS (Manipulated)
+                            IIP-TTS 
+                            (Manipulated)
                         </div>
                         <audio controls controlsList="nodownload"
                             style='display: inline-block; align-self: center; padding-top:8px; padding-bottom:8px; width: 270px; height: 50px; width: 270px; height: 50px'>
@@ -889,7 +898,8 @@
 
                     <div class='row' style='text-align: center;'>
                         <div class='item' style='width: 150px; align-self: center;'>
-                            FastPitch (Original)
+                            FastPitch 
+                            (Original)
                         </div>
                         <audio controls controlsList="nodownload"
                             style='display: inline-block; align-self: center; padding-top:8px; padding-bottom:8px; width: 270px; height: 50px; width: 270px; height: 50px'>
@@ -899,7 +909,8 @@
                     </div>
                     <div class='row' style='text-align: center;'>
                         <div class='item' style='width: 150px; align-self: center;'>
-                            FastPitch (Manipulated)
+                            FastPitch 
+                            (Manipulated)
                         </div>
                         <audio controls controlsList="nodownload"
                             style='display: inline-block; align-self: center; padding-top:8px; padding-bottom:8px; width: 270px; height: 50px; width: 270px; height: 50px'>
@@ -909,7 +920,8 @@
                     </div>
                     <div class='row' style='text-align: center;'>
                         <div class='item' style='width: 150px; align-self: center;'>
-                            IIP-TTS (Original)
+                            IIP-TTS 
+                            (Original)
                         </div>
                         <audio controls controlsList="nodownload"
                             style='display: inline-block; align-self: center; padding-top:8px; padding-bottom:8px; width: 270px; height: 50px; width: 270px; height: 50px'>
@@ -919,7 +931,8 @@
                     </div>
                     <div class='row' style='text-align: center;'>
                         <div class='item' style='width: 150px; align-self: center;'>
-                            IIP-TTS (Manipulated)
+                            IIP-TTS 
+                            (Manipulated)
                         </div>
                         <audio controls controlsList="nodownload"
                             style='display: inline-block; align-self: center; padding-top:8px; padding-bottom:8px; width: 270px; height: 50px; width: 270px; height: 50px'>
