--- a/index.html
+++ b/index.html
@@ -780,8 +780,7 @@
 
                     <div class='row' style='text-align: center;'>
                         <div class='item' style='width: 150px; align-self: center;'>
-                            FastPitch 
-                            (Original)
+                            FastPitch     (Original)
                         </div>
                         <audio controls controlsList="nodownload"
                             style='display: inline-block; align-self: center; padding-top:8px; padding-bottom:8px; width: 270px; height: 50px; width: 270px; height: 50px'>
@@ -791,8 +790,7 @@
                     </div>
                     <div class='row' style='text-align: center;'>
                         <div class='item' style='width: 150px; align-self: center;'>
-                            FastPitch 
-                            (Manipulated)
+                            FastPitch     (Manipulated)
                         </div>
                         <audio controls controlsList="nodownload"
                             style='display: inline-block; align-self: center; padding-top:8px; padding-bottom:8px; width: 270px; height: 50px; width: 270px; height: 50px'>
@@ -802,8 +800,7 @@
                     </div>
                     <div class='row' style='text-align: center;'>
                         <div class='item' style='width: 150px; align-self: center;'>
-                            IIP-TTS 
-                            (Original)
+                            IIP-TTS (Original)
                         </div>
                         <audio controls controlsList="nodownload"
                             style='display: inline-block; align-self: center; padding-top:8px; padding-bottom:8px; width: 270px; height: 50px; width: 270px; height: 50px'>
@@ -813,8 +810,7 @@
                     </div>
                     <div class='row' style='text-align: center;'>
                         <div class='item' style='width: 150px; align-self: center;'>
-                            IIP-TTS 
-                            (Manipulated)
+                            IIP-TTS (Manipulated)
                         </div>
                         <audio controls controlsList="nodownload"
                             style='display: inline-block; align-self: center; padding-top:8px; padding-bottom:8px; width: 270px; height: 50px; width: 270px; height: 50px'>
@@ -823,7 +819,7 @@
                         </audio>
                     </div>
                 </div>
-
+                
                 <div style='flex: 1;'>
                     <p class='h4'>Example 6</p>
                     <div class='row' style='height: 40px; text-align: center; height: 80px'>
@@ -838,8 +834,7 @@
 
                     <div class='row' style='text-align: center;'>
                         <div class='item' style='width: 150px; align-self: center;'>
-                            FastPitch 
-                            (Original)
+                            FastPitch (Original)
                         </div>
                         <audio controls controlsList="nodownload"
                             style='display: inline-block; align-self: center; padding-top:8px; padding-bottom:8px; width: 270px; height: 50px; width: 270px; height: 50px'>
@@ -849,8 +844,7 @@
                     </div>
                     <div class='row' style='text-align: center;'>
                         <div class='item' style='width: 150px; align-self: center;'>
-                            FastPitch 
-                            (Manipulated)
+                            FastPitch (Manipulated)
                         </div>
                         <audio controls controlsList="nodownload"
                             style='display: inline-block; align-self: center; padding-top:8px; padding-bottom:8px; width: 270px; height: 50px; width: 270px; height: 50px'>
@@ -860,8 +854,7 @@
                     </div>
                     <div class='row' style='text-align: center;'>
                         <div class='item' style='width: 150px; align-self: center;'>
-                            IIP-TTS 
-                            (Original)
+                            IIP-TTS (Original)
                         </div>
                         <audio controls controlsList="nodownload"
                             style='display: inline-block; align-self: center; padding-top:8px; padding-bottom:8px; width: 270px; height: 50px; width: 270px; height: 50px'>
@@ -871,8 +864,7 @@
                     </div>
                     <div class='row' style='text-align: center;'>
                         <div class='item' style='width: 150px; align-self: center;'>
-                            IIP-TTS 
-                            (Manipulated)
+                            IIP-TTS (Manipulated)
                         </div>
                         <audio controls controlsList="nodownload"
                             style='display: inline-block; align-self: center; padding-top:8px; padding-bottom:8px; width: 270px; height: 50px; width: 270px; height: 50px'>
@@ -898,8 +890,7 @@
 
                     <div class='row' style='text-align: center;'>
                         <div class='item' style='width: 150px; align-self: center;'>
-                            FastPitch 
-                            (Original)
+                            FastPitch (Original)
                         </div>
                         <audio controls controlsList="nodownload"
                             style='display: inline-block; align-self: center; padding-top:8px; padding-bottom:8px; width: 270px; height: 50px; width: 270px; height: 50px'>
@@ -909,8 +900,7 @@
                     </div>
                     <div class='row' style='text-align: center;'>
                         <div class='item' style='width: 150px; align-self: center;'>
-                            FastPitch 
-                            (Manipulated)
+                            FastPitch (Manipulated)
                         </div>
                         <audio controls controlsList="nodownload"
                             style='display: inline-block; align-self: center; padding-top:8px; padding-bottom:8px; width: 270px; height: 50px; width: 270px; height: 50px'>
@@ -920,8 +910,7 @@
                     </div>
                     <div class='row' style='text-align: center;'>
                         <div class='item' style='width: 150px; align-self: center;'>
-                            IIP-TTS 
-                            (Original)
+                            IIP-TTS (Original)
                         </div>
                         <audio controls controlsList="nodownload"
                             style='display: inline-block; align-self: center; padding-top:8px; padding-bottom:8px; width: 270px; height: 50px; width: 270px; height: 50px'>
@@ -931,8 +920,7 @@
                     </div>
                     <div class='row' style='text-align: center;'>
                         <div class='item' style='width: 150px; align-self: center;'>
-                            IIP-TTS 
-                            (Manipulated)
+                            IIP-TTS (Manipulated)
                         </div>
                         <audio controls controlsList="nodownload"
                             style='display: inline-block; align-self: center; padding-top:8px; padding-bottom:8px; width: 270px; height: 50px; width: 270px; height: 50px'>
