--- a/index.html
+++ b/index.html
@@ -93,8 +93,7 @@
                             Input Text
                         </div>
                         <div class='item' style='align-self: center; text-align: center; width: 270px;'>
-                            In the nutrition of <span style="font-style:italic;color: #ff4f4f">the animal the most
-                                essential and</span> characteristic part of the food supply is derived from vegetable
+                            Mr. Buxton's friends at once paid the forty shillings, and the boy was released.
                         </div>
                     </div>
                     <div class='row' style='text-align: center;'>
@@ -150,8 +149,7 @@
                             Input Text
                         </div>
                         <div class='item' style='align-self: center; text-align: center; width: 270px;'>
-                            In <span style="font-style:italic;color: #ff4f4f">the face of impediments confessedly
-                                discouraging</span>
+                            He had here completed his ascent.
                         </div>
                     </div>
                     <div class='row' style='text-align: center;'>
@@ -211,8 +209,7 @@
                             Input Text
                         </div>
                         <div class='item' style='align-self: center; text-align: center; width: 270px;'>
-                            The second step we have taken in <span style="font-style:italic;color: #ff4f4f">the
-                                restoration of normal business enterprise</span>
+                            Whether it was greed or a quarrel that drove Greenacre to the desperate deed remains obscure.
                         </div>
                     </div>
                     <div class='row' style='text-align: center;'>
@@ -267,7 +264,7 @@
                             Input Text
                         </div>
                         <div class='item' style='align-self: center; text-align: center; width: 270px;'>
-                            <span style="font-style:italic;color: #ff4f4f">They agree that Hosty told</span> Revill
+                            Later in the day each woman found an empty shell on the ground near the house. These two shells were delivered to the police.
                         </div>
                     </div>
                     <div class='row' style='text-align: center;'>
@@ -325,8 +322,7 @@
                             Input Text
                         </div>
                         <div class='item' style='align-self: center; text-align: center; width: 270px;'>
-                            The second step we have taken in <span style="font-style:italic;color: #ff4f4f">the
-                                restoration of normal business enterprise</span>
+                            The several military intelligence agencies reported crank mail and similar threats involving the President.
                         </div>
                     </div>
                     <div class='row' style='text-align: center;'>
@@ -379,7 +375,7 @@
                             Input Text
                         </div>
                         <div class='item' style='align-self: center; text-align: center; width: 270px;'>
-                            <span style="font-style:italic;color: #ff4f4f">They agree that Hosty told</span> Revill
+                            The fact was that the years as they passed, nearly twenty in all, had worked but little permanent improvement in this detestable prison.
                         </div>
                     </div>
                     <div class='row' style='text-align: center;'>
@@ -437,8 +433,7 @@
                             Input Text
                         </div>
                         <div class='item' style='align-self: center; text-align: center; width: 270px;'>
-                            The second step we have taken in <span style="font-style:italic;color: #ff4f4f">the
-                                restoration of normal business enterprise</span>
+                            The employees raced the elevators to the first floor. Givens saw Oswald standing at the gate on the fifth floor as the elevator went by.
                         </div>
                     </div>
                     <div class='row' style='text-align: center;'>
@@ -491,7 +486,7 @@
                             Input Text
                         </div>
                         <div class='item' style='align-self: center; text-align: center; width: 270px;'>
-                            <span style="font-style:italic;color: #ff4f4f">They agree that Hosty told</span> Revill
+                            He also studied Dallas bus schedules to prepare for his later use of buses to travel to and from General Walker's house.
                         </div>
                     </div>
                     <div class='row' style='text-align: center;'>
@@ -780,7 +775,7 @@
 
                     <div class='row' style='text-align: center;'>
                         <div class='item' style='width: 150px; align-self: center;'>
-                            FastPitch     (Original)
+                            FastPitch (Original)
                         </div>
                         <audio controls controlsList="nodownload"
                             style='display: inline-block; align-self: center; padding-top:8px; padding-bottom:8px; width: 270px; height: 50px; width: 270px; height: 50px'>
@@ -790,7 +785,7 @@
                     </div>
                     <div class='row' style='text-align: center;'>
                         <div class='item' style='width: 150px; align-self: center;'>
-                            FastPitch     (Manipulated)
+                            FastPitch (Manipulated)
                         </div>
                         <audio controls controlsList="nodownload"
                             style='display: inline-block; align-self: center; padding-top:8px; padding-bottom:8px; width: 270px; height: 50px; width: 270px; height: 50px'>
