--- a/index.html
+++ b/index.html
@@ -540,6 +540,10 @@
                 <p class='h3 font-weight-normal'>2. Pitch Control (VCTK)</p><br>
             </div>
 
+            <div class='row' style='margin-top: 40px;margin-bottom: 20px'>
+                <p class='h3 font-weight-normal'>a) to be high </p><br>
+            </div>
+
             <div style='display: flex; align-content: center;margin-bottom: 50px'>
                 <div style='flex: 1;'>
                     <p class='h4'>Example 1</p>
@@ -548,8 +552,7 @@
                             Input Text
                         </div>
                         <div class='item' style='align-self: center; padding-left: 5px; width: 350px'>
-                            Three others subsequently <span style='font-style: italic;color: #ff4f4f'>identified</span>
-                            Oswald from a photograph
+                            I enjoy the creative <span style='font-style: italic;color: #ff4f4f'>process.</span>
                         </div>
                     </div>
 
@@ -602,8 +605,7 @@
                             Input Text
                         </div>
                         <div class='item' style='align-self: center; padding-left: 5px; width: 350px'>
-                            Three others subsequently <span style='font-style: italic;color: #ff4f4f'>identified</span>
-                            Oswald from a photograph
+                            This is my home <span style='font-style: italic;color: #ff4f4f'>town.</span>
                         </div>
                     </div>
 
@@ -658,8 +660,7 @@
                             Input Text
                         </div>
                         <div class='item' style='align-self: center; padding-left: 5px; width: 350px'>
-                            Three others subsequently <span style='font-style: italic;color: #ff4f4f'>identified</span>
-                            Oswald from a photograph
+                            Advice and counselling will be <span style='font-style: italic;color: #ff4f4f'>offered.</span>
                         </div>
                     </div>
 
@@ -712,8 +713,7 @@
                             Input Text
                         </div>
                         <div class='item' style='align-self: center; padding-left: 5px; width: 350px'>
-                            Three others subsequently <span style='font-style: italic;color: #ff4f4f'>identified</span>
-                            Oswald from a photograph
+                            What happens when the funding is <span style='font-style: italic;color: #ff4f4f'>exhausted.</span>
                         </div>
                     </div>
 
@@ -760,6 +760,10 @@
                 </div>
             </div>
 
+            <div class='row' style='margin-top: 40px;margin-bottom: 20px'>
+                <p class='h3 font-weight-normal'>b) to be lower </p><br>
+            </div>
+
             <div style='display: flex; align-content: center;margin-bottom: 50px'>
                 <div style='flex: 1;'>
                     <p class='h4'>Example 5</p>
@@ -768,8 +772,7 @@
                             Input Text
                         </div>
                         <div class='item' style='align-self: center; padding-left: 5px; width: 350px'>
-                            Three others subsequently <span style='font-style: italic;color: #ff4f4f'>identified</span>
-                            Oswald from a photograph
+                            Are you from the <span style='font-style: italic;color: #ff4f4f'>rugby?</span>
                         </div>
                     </div>
 
@@ -822,8 +825,7 @@
                             Input Text
                         </div>
                         <div class='item' style='align-self: center; padding-left: 5px; width: 350px'>
-                            Three others subsequently <span style='font-style: italic;color: #ff4f4f'>identified</span>
-                            Oswald from a photograph
+                            Is our children <span style='font-style: italic;color: #ff4f4f'>learning?</span>
                         </div>
                     </div>
 
@@ -878,8 +880,7 @@
                             Input Text
                         </div>
                         <div class='item' style='align-self: center; padding-left: 5px; width: 350px'>
-                            Three others subsequently <span style='font-style: italic;color: #ff4f4f'>identified</span>
-                            Oswald from a photograph
+                            What method of funding is being <span style='font-style: italic;color: #ff4f4f'>used?</span>
                         </div>
                     </div>
 
@@ -932,8 +933,7 @@
                             Input Text
                         </div>
                         <div class='item' style='align-self: center; padding-left: 5px; width: 350px'>
-                            Three others subsequently <span style='font-style: italic;color: #ff4f4f'>identified</span>
-                            Oswald from a photograph
+                            So what does one <span style='font-style: italic;color: #ff4f4f'>do?</span>
                         </div>
                     </div>
 
