--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
     </div>
     <div class="container" style="max-width:1300px;">
         <!-- authors -->
-        <div class='row text-center h5 font-weight-normal pl-0 pr-0 mb-4' style="font-style:italic">
-            <a class="col-md-3 col-xs-3 text-dark"><span>Dam Heo</span><br>
+        <div class='row text-center h5 font-weight-normal pl-4 pr-0 mb-2' style="font-style:italic">
+            <a class="col-md-2 col-xs-2 text-dark"><span>Dam Heo</span><br>
                 <span class="col-md-12 col-xs-12 text-dark font-weight-light">Neosapience, Inc.</span>
             </a>
-            <a class="col-md-5 col-xs-5 text-dark"><span>Younggun Lee</span><br>
+            <a class="col-md-4 col-xs-4 text-dark"><span>Younggun Lee</span><br>
                 <span class="col-md-12 col-xs-12 text-dark font-weight-light">Neosapience, Inc.</span>
             </a>
             <a class="col-md-1 col-xs-1 text-dark"><span></span></a>
@@ -539,8 +539,8 @@
                 <p class='h3 font-weight-normal'>2. Pitch Control (VCTK)</p><br>
             </div>
 
-            <div class='row' style='margin-top: 40px;margin-bottom: 20px'>
-                <p class='h3 font-weight-normal'>a) to be high </p><br>
+            <div class='row' style='margin-top: 40px;margin-bottom: 10px'>
+                <p class='h3 font-weight-normal'>a) to be high pitch</p><br>
             </div>
 
             <div style='display: flex; align-content: center;margin-bottom: 50px'>
@@ -759,8 +759,8 @@
                 </div>
             </div>
 
-            <div class='row' style='margin-top: 40px;margin-bottom: 20px'>
-                <p class='h3 font-weight-normal'>b) to be lower </p><br>
+            <div class='row' style='margin-top: 40px;margin-bottom: 10px'>
+                <p class='h3 font-weight-normal'>b) to be lower pitch</p><br>
             </div>
 
             <div style='display: flex; align-content: center;margin-bottom: 50px'>
