--- a/index.html
+++ b/index.html
@@ -35,11 +35,15 @@
     </div>
     <div class="container" style="max-width:1300px;">
         <!-- authors -->
-        <div class='row text-center h5 font-weight-normal pl-0 pr-4 mb-4' style="font-style:italic">
-            <a class="col-md-2 col-xs-2 text-dark"><span>Dam Heo</span><br>
+        <div class='row text-center h5 font-weight-normal pl-0 pr-0 mb-4' style="font-style:italic">
+            <a class="col-md-1 col-xs-1 text-dark"><span></span></a>
+            <a class="col-md-3 col-xs-3 text-dark"><span>Dam Heo</span><br>
+                <span class="col-md-12 col-xs-12 text-dark font-weight-light">Yale University</span>
+            </a>
+            <a class="col-md-4 col-xs-4 text-dark"><span></span><br>
                 <span class="col-md-12 col-xs-12 text-dark font-weight-light">Neosapience, Inc.</span>
             </a>
-            <a class="col-md-4 col-xs-4 text-dark"><span>Younggun Lee</span><br>
+            <a class="col-md-3 col-xs-3 text-dark"><span>Younggun Lee</span><br>
                 <span class="col-md-12 col-xs-12 text-dark font-weight-light">Neosapience, Inc.</span>
             </a>
             <a class="col-md-1 col-xs-1 text-dark"><span></span></a>
