--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
             <a class="col-md-3 col-xs-3 text-dark"><span>Dam Heo</span><br>
                 <span class="col-md-12 col-xs-12 text-dark font-weight-light">Neosapience, Inc.</span>
             </a>
-
+            <a class="col-md-1 col-xs-1 text-dark"><span></span><br>
+                <span class="col-md-12 col-xs-12 text-dark font-weight-light"></span>
+            </a>
             <a class="col-md-3 col-xs-3 text-dark"><span>Younggun Lee</span><br>
                 <span class="col-md-12 col-xs-12 text-dark font-weight-light">Neosapience, Inc.</span>
             </a>
