--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
                             Input Text
                         </div>
                         <div class='item' style='align-self: center; padding-left: 5px; width: 350px'>
-                            What happens when the funding is <span style='font-style: italic;color: #ff4f4f'>exhausted.</span>
+                            My life has been <span style='font-style: italic;color: #ff4f4f'>destroyed.</span>
                         </div>
                     </div>
 
