--- a/index.html
+++ b/index.html
@@ -538,11 +538,11 @@
             </div>
 
             <div class='row' style='margin-top: 60px;margin-bottom: 20px'>
-                <p class='h3 font-weight-normal'>2. Pitch Control (VCTK)</p><br>
+                <p class='h3 font-weight-normal'>2. Pitch Control (LJSpeech 1.1)</p><br>
             </div>
 
             <div class='row' style='margin-top: 40px;margin-bottom: 10px'>
-                <p class='h3 font-weight-normal'>a) to be high pitch</p><br>
+                <p class='h3 font-weight-normal'>a) to be higher pitch</p><br>
             </div>
 
             <div style='display: flex; align-content: center;margin-bottom: 50px'>
@@ -553,7 +553,7 @@
                             Input Text
                         </div>
                         <div class='item' style='align-self: center; padding-left: 5px; width: 350px'>
-                            I enjoy the creative <span style='font-style: italic;color: #ff4f4f'>process.</span>
+                            The second attack was fatal, and ended in Cook's death from <span style='font-style: italic;color: #ff4f4f'>tetanus.</span>
                         </div>
                     </div>
 
@@ -606,7 +606,7 @@
                             Input Text
                         </div>
                         <div class='item' style='align-self: center; padding-left: 5px; width: 350px'>
-                            This is my home <span style='font-style: italic;color: #ff4f4f'>town.</span>
+                            After this came the charge of administering oil of vitriol, which failed, as has been <span style='font-style: italic;color: #ff4f4f'>described.</span>
                         </div>
                     </div>
 
@@ -661,7 +661,7 @@
                             Input Text
                         </div>
                         <div class='item' style='align-self: center; padding-left: 5px; width: 350px'>
-                            Advice and counselling will be <span style='font-style: italic;color: #ff4f4f'>offered.</span>
+                            The prisoners were in due course transferred to Newgate, to be put upon their trial at the Central Criminal <span style='font-style: italic;color: #ff4f4f'>Court.</span>
                         </div>
                     </div>
 
@@ -714,7 +714,7 @@
                             Input Text
                         </div>
                         <div class='item' style='align-self: center; padding-left: 5px; width: 350px'>
-                            My life has been <span style='font-style: italic;color: #ff4f4f'>destroyed.</span>
+                            The books and journals he was to keep were minutely specified, and his constant presence in or near the jail was insisted <span style='font-style: italic;color: #ff4f4f'>upon.</span>
                         </div>
                     </div>
 
@@ -773,7 +773,7 @@
                             Input Text
                         </div>
                         <div class='item' style='align-self: center; padding-left: 5px; width: 350px'>
-                            Are you from the <span style='font-style: italic;color: #ff4f4f'>rugby?</span>
+                            What did he say to <span style='font-style: italic;color: #ff4f4f'>that?</span>
                         </div>
                     </div>
 
@@ -826,7 +826,7 @@
                             Input Text
                         </div>
                         <div class='item' style='align-self: center; padding-left: 5px; width: 350px'>
-                            Is our children <span style='font-style: italic;color: #ff4f4f'>learning?</span>
+                            The soldiers <span style='font-style: italic;color: #ff4f4f'>then?</span>
                         </div>
                     </div>
 
@@ -881,7 +881,7 @@
                             Input Text
                         </div>
                         <div class='item' style='align-self: center; padding-left: 5px; width: 350px'>
-                            What method of funding is being <span style='font-style: italic;color: #ff4f4f'>used?</span>
+                            Question: What did you say to <span style='font-style: italic;color: #ff4f4f'>that?</span>
                         </div>
                     </div>
 
@@ -934,7 +934,7 @@
                             Input Text
                         </div>
                         <div class='item' style='align-self: center; padding-left: 5px; width: 350px'>
-                            So what does one <span style='font-style: italic;color: #ff4f4f'>do?</span>
+                            But why should I repeat the <span style='font-style: italic;color: #ff4f4f'>whole?</span>
                         </div>
                     </div>
 
